# saas

./: .gitignore  Cargo.toml
config/: default.yaml  development.yaml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/framework/: Cargo.toml
crates/framework/src/: constants.rs  lib.rs
crates/framework/src/auth/: access_spec.rs  jwt.rs  mod.rs  session.rs
crates/framework/src/config/: mod.rs
crates/framework/src/context/: audit.rs  mod.rs
crates/framework/src/error/: app_error.rs  ext.rs  mod.rs
crates/framework/src/extractors/: mod.rs  validated_json.rs  validated_query.rs
crates/framework/src/i18n/: mod.rs
crates/framework/src/infra/: captcha.rs  crypto.rs  mod.rs  pg.rs  redis.rs  smtp.rs  storage.rs
crates/framework/src/middleware/: access.rs  access_macros.rs  auth.rs  macros.rs  mod.rs  operlog.rs  operlog_macros.rs  telemetry.rs  tenant.rs  tenant_http.rs
crates/framework/src/response/: codes.rs  envelope.rs  mod.rs  pagination.rs  time.rs  wire_test.rs
crates/framework/src/telemetry/: metrics.rs  mod.rs  tracing.rs
crates/framework/src/testing/: explain_plan.rs  mod.rs  pg_catalog.rs
crates/modules/: Cargo.toml
crates/modules/src/: lib.rs  openapi.rs  state.rs
crates/modules/src/auth/: dto.rs  handler.rs  mod.rs  service.rs
crates/modules/src/domain/: audit_log_repo.rs  config_repo.rs  constants.rs  dept_repo.rs  dict_data_repo.rs  dict_type_repo.rs  entities.rs  file_folder_repo.rs  file_share_repo.rs  login_log_repo.rs  mail_account_repo.rs  mail_log_repo.rs  mail_template_repo.rs  menu_repo.rs  mod.rs  notice_repo.rs  notify_message_repo.rs  notify_template_repo.rs  oper_log_repo.rs  post_repo.rs  role_repo.rs  sms_channel_repo.rs  sms_log_repo.rs  sms_template_repo.rs  tenant_package_repo.rs  tenant_repo.rs  upload_repo.rs  user_repo.rs  validators.rs
crates/modules/src/health/: mod.rs
crates/modules/src/message/: mod.rs  template_parser.rs
crates/modules/src/message/mail_account/: dto.rs  handler.rs  service.rs
crates/modules/src/message/mail_log/: dto.rs  handler.rs  service.rs
crates/modules/src/message/mail_send/: dto.rs  handler.rs  mod.rs  service.rs
crates/modules/src/message/mail_template/: dto.rs  handler.rs  service.rs
crates/modules/src/message/notice/: mod.rs  service.rs
crates/modules/src/message/notify_message/: dto.rs  handler.rs  service.rs
crates/modules/src/message/notify_template/: dto.rs  handler.rs  service.rs
crates/modules/src/message/sms_channel/: dto.rs  handler.rs  service.rs
crates/modules/src/message/sms_log/: dto.rs  handler.rs  service.rs
crates/modules/src/message/sms_send/: client.rs  dto.rs  handler.rs  mod.rs  service.rs
crates/modules/src/message/sms_template/: dto.rs  handler.rs  service.rs
crates/modules/src/monitor/: mod.rs
crates/modules/src/monitor/cache/: dto.rs  handler.rs  service.rs
crates/modules/src/monitor/login_log/: dto.rs  handler.rs  service.rs
crates/modules/src/monitor/online_user/: dto.rs  handler.rs  service.rs
crates/modules/src/monitor/oper_log/: dto.rs
crates/modules/src/monitor/server_info/: dto.rs  handler.rs  service.rs
crates/modules/src/system/: mod.rs
crates/modules/src/system/audit_log/: dto.rs  handler.rs  service.rs
crates/modules/src/system/config/: dto.rs  handler.rs  service.rs
crates/modules/src/system/dept/: dto.rs  handler.rs  service.rs
crates/modules/src/system/dict/: dto.rs  handler.rs  service.rs
crates/modules/src/system/file_manager/: dto.rs  handler.rs  service.rs
crates/modules/src/system/login_log/: handler.rs
crates/modules/src/system/menu/: dto.rs  handler.rs  service.rs
crates/modules/src/system/notice/: dto.rs  handler.rs
crates/modules/src/system/oper_log/: handler.rs  service.rs
crates/modules/src/system/post/: dto.rs  handler.rs  service.rs
crates/modules/src/system/role/: dto.rs  handler.rs  mod.rs  service.rs
crates/modules/src/system/tenant/: dto.rs  handler.rs  service.rs
crates/modules/src/system/tenant_dashboard/: dto.rs  handler.rs  service.rs
crates/modules/src/system/tenant_package/: dto.rs  handler.rs  mod.rs  service.rs
crates/modules/src/system/upload/: cos_storage.rs  dto.rs  handler.rs  local_storage.rs  mod.rs  oss_storage.rs  service.rs
crates/modules/src/system/user/: dto.rs  handler.rs  mod.rs  service.rs
crates/modules/tests/: config_module_tests.rs  dept_module_tests.rs  dict_module_tests.rs  http_tests.rs  login_log_module_tests.rs  mail_send_tests.rs  menu_module_tests.rs  notice_module_tests.rs  oper_log_module_tests.rs  post_module_tests.rs  role_module_tests.rs  sms_send_tests.rs  tenant_module_tests.rs  upload_module_tests.rs  user_module_tests.rs
crates/modules/tests/common/: mod.rs
docs/: README.md  RESUME-2026-04-12.md  RESUME-2026-04-13.md  RESUME-phase1-role-module.md  RESUME-phase1-user-module.md  framework-error-envelope-spec.md  framework-observability-spec.md  framework-pagination-indexes.md  framework-pagination-spec.md  phase0-schema-reference.sql  schema-reference.sql
docs/framework/: framework-error-envelope-spec.md  framework-observability-spec.md  framework-openapi-spec.md  framework-operlog-spec.md  framework-pagination-indexes.md  framework-pagination-spec.md  framework-redis-spec.md  framework-repo-executor-spec.md  framework-storage-spec.md  framework-tenant-spec.md
docs/plans/: 2026-04-10-phase1-role-module-plan.md  2026-04-11-framework-error-envelope-v1.0.md  (+6 more)
i18n/: en-US.json  zh-CN.json
scripts/: smoke-config-module.sh  smoke-dept-module.sh  smoke-dict-module.sh  smoke-loginlog-module.sh  smoke-mail-send-module.sh  smoke-menu-module.sh  smoke-notice-module.sh  smoke-notify-module.sh  smoke-operlog-module.sh  smoke-post-module.sh  smoke-role-module.sh  smoke-sms-send-module.sh  smoke-tenant-module.sh  smoke-upload-module.sh  smoke-user-module.sh
stress/: README.md
(+44 files in other folders)
