[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/framework",
    "crates/modules",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "http2"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
    "trace",
    "cors",
    "compression-gzip",
    "set-header",
    "request-id",
] }
hyper = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
] }

# Redis
redis = { version = "1.2.0", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.23.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Errors
thiserror = "2.0.18"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = [
    "http-listener",
] }

# JWT
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }

# Crypto
bcrypt = "0.19.0"

# Config
config = { version = "0.15.22", default-features = false, features = [
    "yaml",
    "convert-case",
] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Utils
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
rand = "0.10.1"
regex = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = 1
