[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
framework = { path = "../framework" }
modules = { path = "../modules" }

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
tower-http.workspace = true
regex.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
