[package]
name = "framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
sqlx.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
config.workspace = true
validator.workspace = true
once_cell.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
rand.workspace = true
utoipa.workspace = true
lettre.workspace = true
aes.workspace = true
cbc.workspace = true
scrypt.workspace = true
hex.workspace = true
