[package]
name = "modules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
framework = { path = "../framework" }

tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
validator.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
reqwest.workspace = true
hmac.workspace = true
sha1.workspace = true
hex.workspace = true
base64.workspace = true
md-5.workspace = true
mime_guess.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tower = { workspace = true }
tracing-subscriber = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
